--- a/src/pages/Company/LogIn/styles.module.scss
+++ b/src/pages/Company/LogIn/styles.module.scss
@@ -2,12 +2,6 @@
 
 .form {
   display: flex;
-}
-
-@media (max-width: $laptopWidth) {
-  .form {
-    padding-left: 5vw;
-    padding-right: 5vw;
-    width: unset;
-  }
+  flex-grow: 1;
+  justify-content: center;
 }
